manifests/greeter-k8s.template.yaml

# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# [START istio_grpc_greeter_go_manifests_deployment_greeter]
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greeter
  template:
    metadata:
      labels:
        app: greeter
    spec:
      containers:
        image: gcr.io/$GOOGLE_CLOUD_PROJECT/grpc-greeter-java
        imagePullPolicy: Always
        name: greeter
        ports:
        - containerPort: 8083
# [END istio_grpc_greeter_go_manifests_deployment_greeter]
---
# [START istio_grpc_greeter_go_manifests_service_greeter]
apiVersion: v1
kind: Service
metadata:
  name: greeter
spec:
  ports:
  - name: grpc
    port: 80
    targetPort: 8083
    protocol: TCP
  selector:
    app: greeter
  type: ClusterIP
# [END istio_grpc_greeter_go_manifests_service_greeter]
---
