manifests/greeter-istio-virtualservice.yaml

# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# [START istio_grpc_greeter_go_manifests_virtualservice_greeter]
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: greeter
spec:
  gateways:
  - greeter
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: greeter
        port:
          number: 80
# [END istio_grpc_greeter_go_manifests_virtualservice_greeter]
---
